--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,16 +23,22 @@
             android:layout_height="350dp"
             android:background="@drawable/volleyball_field"
             android:layout_marginHorizontal="20dp"
-            android:gravity="center_vertical"
+            android:gravity="center"
             >
 
             <GridLayout
                 android:id="@+id/grid_jugadoresPista"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_centerInParent="true"
                 android:columnCount="3"
-                android:rowCount="2" />
+                android:rowCount="2"
+                android:orientation="horizontal"
+                >
+
+                <!-- <include layout="@layout/cardview_player"></include> -->
+
+
+            </GridLayout>
 
         </RelativeLayout>
 
@@ -70,6 +76,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="15dp"
         android:elevation="5dp"
+        android:onClick="marcador"
         />
 
     <View
@@ -103,7 +110,7 @@
         android:id="@+id/marcador_sets_local_view"
         android:layout_width="45dp"
         android:layout_height="60dp"
-        android:text="10"
+        android:text="0"
         android:textSize="100dp"
         android:background="@drawable/marcador_sets"
         android:textColor="@color/light_blue"
