--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.VolleyEssentials" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/azul_pista</item> -->
+        <item name="colorPrimary">@color/azul_pista</item>
     </style>
 
     <style name="Theme.VolleyEssentials" parent="Base.Theme.VolleyEssentials" />
